--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,17 @@
   "env": {
     "development": {
       "plugins": ["react-transform"],
+      "extra": {
+        "react-transform": {
+          "transforms": [{
+            "transform": "react-transform-hmr",
+            "imports": ["react"],
+            "locals": ["module"]
+          }, {
+            "transform": "react-transform-catch-errors",
+            "imports": ["react", "redbox-react"]
+          }]
+        }
       }
     }
   }
