--- a/package.json
+++ b/package.json
@@ -5,23 +5,40 @@
   "main": "index.js",
   "scripts": {
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run build:webpack"
+    "build": "npm run build:webpack",
+    "start": "concurrent --kill-others \"node devServer.js\" \"supervisor -w ./simple_api simple_api/server.js\"",
+    "lint": "eslint src"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.3",
     "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-transform": "^1.1.1",
-    "express": "^4.13.3",
-    "jquery": "^2.2.0",
-    "react-dom": "^0.14.3",
-    "style-loader": "^0.13.0",
+    "concurrently": "^1.0.0",
     "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
+    "eslint": "^1.3.1",
+    "eslint-plugin-react": "^2.3.0",
+    "express": "^4.13.3",
+    "flux": "^2.1.1",
+    "history": "^1.13.1",
+    "jquery": "^2.2.0",
     "json-loader": "^0.5.4",
-    "autoprefixer": "^6.2.1",
-    "postcss-loader": "^0.8.0",
+    "keymirror": "^0.1.1",
+    "postcss-loader": "^0.8.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^1.2.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "redbox-react": "^1.0.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^1.0.3",
+    "supervisor": "^0.9.1",
+    "react-transform-hmr": "^1.0.0",
+    "style-loader": "^0.13.0",
+    "file-loader": "^0.8.5",
     "webpack": "^1.9.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
@@ -39,3 +56,6 @@
   "author": "Renat Osmanov",
   "license": "ISC"
 }
+
+
+
