--- a/package.json
+++ b/package.json
@@ -11,34 +11,37 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.9",
-    "babel-loader": "^5.1.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "concurrently": "^1.0.0",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "concurrently": "^2.1.0",
     "css-loader": "^0.23.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^2.3.0",
+    "eslint": "^2.10.2",
+    "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
     "flux": "^2.1.1",
-    "history": "^1.13.1",
+    "history": "^2.1.1",
     "jquery": "^2.2.0",
     "json-loader": "^0.5.4",
     "keymirror": "^0.1.1",
-    "postcss-loader": "^0.8.1",
+    "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^1.2.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-router": "^1.0.0",
+    "postcss-simple-vars": "^2.0.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-router": "^2.4.1",
     "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
-    "supervisor": "^0.9.1",
-    "react-transform-hmr": "^1.0.0",
+    "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.0",
-    "file-loader": "^0.8.5",
+    "supervisor": "^0.10.0",
     "webpack": "^1.9.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
@@ -46,16 +49,13 @@
   "dependencies": {
     "history": "^1.17.0",
     "react-redux": "^4.4.0",
-    "react-paginate": "^0.5.0",
+    "react-paginate": "^1.0.5",
     "react-router": "^1.0.2",
     "redux": "^3.2.1",
     "redux-logger": "^2.5.2",
-    "redux-thunk": "^1.0.3",
-    "redux-router": "1.0.0-beta5"
+    "redux-thunk": "^2.1.0",
+    "redux-router": "1.0.0-beta8"
   },
   "author": "Renat Osmanov",
   "license": "ISC"
 }
-
-
-
