--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run build:webpack",
     "start": "concurrent --kill-others \"node devServer.js\" \"supervisor -w ./simple_api simple_api/server.js\"",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "ava \"src/test/**/*.js\" --verbose"
+  },
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "./src/setup-test-env.js"
+    ]
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
-    "babel-core": "^6.9.0",
+    "ava": "^0.15.2",
+    "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "*",
+    "babel-register": "^6.9.0",
     "concurrently": "^2.1.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.10.2",
+    "eslint": "^2.12.0",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
@@ -32,8 +42,8 @@
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^2.0.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
