--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.0.0",
     "json-loader": "^0.5.4",
     "keymirror": "^0.1.1",
+    "nock": "^8.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^2.0.0",
@@ -49,6 +50,7 @@
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1",
     "redux-logger": "^2.6.1",
+    "redux-mock-store": "^1.1.0",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.0",
     "supervisor": "^0.11.0",
