--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux-logger": "^2.6.1",
     "redux-mock-store": "^1.1.0",
     "redux-thunk": "^2.1.0",
+    "sinon": "^1.17.4",
     "style-loader": "^0.13.0",
     "supervisor": "^0.11.0",
     "webpack": "^1.9.6",
