--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-register": "^6.9.0",
     "concurrently": "^2.1.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "eslint": "^2.12.0",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.3",
@@ -44,6 +45,7 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^2.0.0",
     "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
     "react-transform-catch-errors": "^1.0.0",
